k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-web
  namespace: statex-apps
  labels:
    app: minio-web
    managed-by: k8s-migration
spec:
  selector:
    app: minio-web
  ports:
    - name: http
      port: 80
      targetPort: 80
