k8s/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-web
  namespace: statex-apps
  labels:
    app: minio-web
    managed-by: k8s-migration
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - storage.alfares.cz
      secretName: minio-web-tls
  rules:
    - host: storage.alfares.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-web
                port:
                  number: 80
